# django_id_areadata

./: LICENSE  README.md  pyproject.toml  setup.cfg
django_id_areadata/: apps.py  area.py  csv_utils.py  models.py  serializers.py  urls.py  views.py
