[metadata]
name = django_id_areadata
version = 0.1.0
description = Django App to Get Indonesian Area Data
long_description = file: README.md
author = Visi Prima Nusantara
author_email = developer@visiprima.id
license = MIT
classifiers =
    Framework :: Django
    Programming Language :: Python
    Programming Language :: Python :: 3
    Environment :: Web Environment
    Intended Audience :: Developers

[options]
packages = find:
include_package_data = True
install_requires =
    django
    djangorestframework
    drf-spectacular
    django-filter

[options.package_data]
django_id_areadata = data/*.csv, data/LICENSE
